@@ -1,2 +1,4 @@
 # WedBars
- Hypixel Bed Wars but way better trust me
+Hypixel Bed Wars but way better trust me
+
+Interested in setting this up for yourself? You can find all that information in the [documentation](DOCUMENTATION.md).
