@@ -6,6 +6,7 @@ import org.bukkit.event.player.PlayerQuitEvent;
 
 import com.blockhead7360.mc.wedbars.WedBars;
 import com.blockhead7360.mc.wedbars.player.Gamer;
+import com.blockhead7360.mc.wedbars.player.Statistic;
 import com.blockhead7360.mc.wedbars.player.Status;
 
 public class ConnectionListener implements Listener {
@@ -25,10 +26,15 @@ public class ConnectionListener implements Listener {
 			
 			if (gamer == null || gamer.getStatus() == Status.DEAD) return;
 			
-			if (WedBars.running)
+			if (WedBars.running) {
+				
+				gamer.addOneToStatistic(Statistic.FDEATHS);
+				gamer.addOneToStatistic(Statistic.LOSSES);
 				GameActions.death(e.getPlayer(), true);
-			else
+				
+			} else {
 				WedBars.arena.deleteGamer(gamer);
+			}
 			
 		}
 		
