@@ -2,13 +2,16 @@ package com.blockhead7360.mc.wedbars.player;
 
 public enum Statistic {
 	
-	WINS,
-	LOSSES,
-	KILLS,
-	DEATHS,
-	FKILLS,
-	FDEATHS,
-	BKILLS,
-	BDEATHS
+	WINS, // game wins
+	LOSSES, // game losses
+	KILLS, // all kills
+	DEATHS, // all deaths
+	FKILLS, // final kills
+	FDEATHS, // final deaths
+	BKILLS, // beds broken
+	BDEATHS, // beds lost
+	MDEATHS, // deaths by maids lmaoo
+	BPLACED, // blocks placed
+	WINSTREAK // win streak
 	
 }
